# IAS_ESMO

./: CLAUDE.md  LICENSE  pyproject.toml
application/api/: urls.py  views.py
application/api/services/: exams_handler.py
application/application/: settings.py  urls.py
application/core/context_processors/: contents.py
application/services/: book_handler.py  common.py  exams_handler.py  exceptions.py  key_extractor.py
application/static/css/: my_style.css
application/static/js/: index.js
application/static/multi_select/: jquery.multiselect.js
application/static/plug-ins/9dcbecd42ad/i18n/: Russian.json
application/templates/: base.html  index.html
application/templates/esmo/: index.html
application/templates/includes/: footer.html  header.html
application/templates/users/: login.html  logout.html
application/users/: urls.py
ci/: createsuperuser.sh  docker-compose.production.yml  docker-compose.yml  run_esmo.sh
ci/jenkins/: docker_build.jenkins  docker_build_full.jenkins
ci/nginx/: Dockerfile
docker/: Dockerfile  docker-compose.yml  nginx.conf  run_esmo.sh
